fix layout issues on order page. no more scroll bar on right column. left/right column heights are the same.

--- a/public/stylesheets/sass/order.scss
+++ b/public/stylesheets/sass/order.scss
@@ -11,7 +11,10 @@
     .right_col {
         .content_wrapper {
             .content {
-                padding: 10px;
+                padding: 0;
+                .text_content {
+                    padding: 10px;
+                }
             }
         }
     }
